# questionnaire-webtool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
app/: __init__.py  app.py  config.py  test.py
app/api/: __init__.py  auth.py  consent.py  report.py  response.py  signup.py  test_edits.py  user.py
app/api/core/: cookies.py  dbmodels.py  models.py  qutools.py  time.py
app/core/: data.py  utils.py
app/interface/: __init__.py  account.py  auth.py  consent.py  htmx.py  index.py  quest.py  report.py  signup.py  user_reset.py
app/interface/core/: __init__.py  api.py  cookies.py  forms.py  recaptcha.py  user.py
app/interface/static/: custom.css  drawer.js  postscript.js  prescript.js  report.js  test-edits.js
app/interface/templates/: htmx.html
app/interface/templates/components/: about.html  alert_consent.html  alert_recaptcha.html  base.html  base_loggedin.html  form_errors.html  infos.html  sidebar_items.html
app/interface/templates/components/views/: A1.html  A10.html  A11.html  A12.html  A13.html  A14.html  A15.html  A16.html  A17.html  A18.html  A19.html  A2.html  A20.html  A21.html  A22.html  A23.html  A24.html  A3.html  A4.html  A5.html  A6.html  A7.html  A8.html  A9.html
app/interface/templates/pages/loggedin/: about.html  account.html  home.html  quest.html  report.html
app/interface/templates/pages/loggedout/: about.html  index.html  login.html  request_reset.html  signup.html  tokenexpired.html  user_reset.html
app/interface/templates/test/: b_template.html
